# Personal-AI-Agent-Assistant

./: .env.example  .gitignore  CLAUDE.md  ERRORS.md  LICENSE  MEMORY.md  README.md  pyproject.toml
packaging/: README.md  build_app.ps1  build_app_small.ps1  jarvis_app.py
src/laptop_agent/: __init__.py  advisor.py  app.py  audit.py  autopilot.py  cli.py  config.py  copilot.py  dashboard.py  gui.py  health.py  jobs.py  knowledge.py  memory.py  metrics.py  model_status.py  reasoning.py  reminders.py  safety.py  scheduler.py  tasks.py  token_vault.py  voice.py  webui.py  window_fx.py  workflows.py
src/laptop_agent/agents/: __init__.py  control_room.py  orchestrator.py
src/laptop_agent/planner/: __init__.py  core.py  heuristic.py  openai_compatible.py
src/laptop_agent/tools/: __init__.py  base.py  browser.py  desktop.py  email.py  file_processor.py  files.py  jobright.py  music.py  obsidian.py  research.py  resume_pdf.py  terminal.py  transcribe.py  travel.py  weather.py  web.py  webcam.py  websearch.py  youtube.py
tests/: test_advisor.py  test_autopilot.py  test_browser_tool.py  test_control_room.py  test_copilot.py  test_email_tool.py  test_file_intelligence.py  test_file_processor.py  test_health.py  test_jobright.py  test_jobs.py  test_knowledge.py  test_llm_planner.py  test_model_status.py  test_music.py  test_obsidian.py  test_openrouter_fallback.py  test_orchestrator.py  test_planner.py  test_reasoning.py  test_reminders.py  test_research.py  test_scheduler.py  test_tasks.py  test_terminal_tool.py  test_transcribe.py  test_travel.py  test_voice.py  test_weather.py  test_webcam.py  test_websearch.py  test_webui.py  test_webui_copilot.py  test_webui_jobs.py  test_webui_map.py  test_webui_notes.py  test_webui_pipeline.py  test_webui_runs.py  test_webui_schedule.py  test_webui_trip.py  (+6 more)
