[project]
name = "laptop-agent"
version = "0.34.0"
description = "Local-first voice-capable personal laptop agent scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
voice = ["pyttsx3>=2.90", "SpeechRecognition>=3.10.0"]
browser = ["playwright>=1.45.0"]
desktop = ["pyautogui>=0.9.54", "pillow>=10.0.0"]
docs = ["pypdf>=4.0.0", "python-docx>=1.1.0"]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
transcribe = ["openai-whisper>=20231117"]
metrics = ["psutil>=5.9.0"]
dev = []

[project.scripts]
laptop-agent = "laptop_agent.cli:main"
laptop-agent-gui = "laptop_agent.dashboard:main"
laptop-agent-dashboard = "laptop_agent.dashboard:main"
laptop-agent-deck = "laptop_agent.webui:run_desktop"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
