[project]
name = "laptop-agent"
version = "0.39.0"
description = "Local-first, voice-capable personal laptop agent (J.A.R.V.I.S) with an LLM brain, safe tools behind an approval gate, and Obsidian-backed memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeevan Arlagadda" }]
keywords = ["assistant", "agent", "llm", "voice", "local-first", "obsidian", "jarvis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JeevanReddy0828/Personal-AI-Agent-Assistant"
Repository = "https://github.com/JeevanReddy0828/Personal-AI-Agent-Assistant"
Issues = "https://github.com/JeevanReddy0828/Personal-AI-Agent-Assistant/issues"

[project.optional-dependencies]
voice = ["pyttsx3>=2.90", "SpeechRecognition>=3.10.0"]
app = ["pywebview>=4.4"]
browser = ["playwright>=1.45.0"]
desktop = ["pyautogui>=0.9.54", "pillow>=10.0.0"]
docs = ["pypdf>=4.0.0", "python-docx>=1.1.0"]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
transcribe = ["openai-whisper>=20231117"]
stt = ["vosk>=0.3.45"]
youtube = ["youtube-transcript-api>=0.6.2"]
metrics = ["psutil>=5.9.0"]
vision = ["opencv-python>=4.8.0"]
dev = []

[project.scripts]
laptop-agent = "laptop_agent.cli:main"
laptop-agent-gui = "laptop_agent.dashboard:main"
laptop-agent-dashboard = "laptop_agent.dashboard:main"
laptop-agent-deck = "laptop_agent.webui:run_desktop"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
